// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeacherNavbar renders when the language menu is not open 1`] = `
<div
  className="header"
>
  <div
    className="activity-navbar-content"
  >
    <a
      className="focus-on-dark"
    >
      <img
        alt="Quill logo"
        src="undefined/images/logos/quill-logo-white-2022.svg"
      />
    </a>
    <a
      className="focus-on-dark"
    >
      Save and exit
    </a>
  </div>
</div>
`;

exports[`TeacherNavbar renders when the language menu is open 1`] = `
<div
  className="header"
>
  <div
    className="activity-navbar-content"
  >
    <a
      className="focus-on-dark"
    >
      <img
        alt="Quill logo"
        src="undefined/images/logos/quill-logo-white-2022.svg"
      />
    </a>
    <button
      className="focus-on-dark"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="Close icon"
        src="undefined/images/icons/close-white.svg"
      />
      <span>
        Close
      </span>
    </button>
  </div>
  <div
    className="activity-navbar-content"
  >
    <div
      className="mobile-student-language-menu"
    >
      <h2>
        Choose a directions language
      </h2>
      <LanguageOptions
        dispatch={[Function]}
      />
    </div>
  </div>
</div>
`;
